Fix display of Disclaimer on mobile

--- a/src/Disclaimer.css
+++ b/src/Disclaimer.css
@@ -4,6 +4,12 @@
 {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .disclaimer.hidden
@@ -27,10 +33,8 @@
 
 .disclaimer-text
 {
-    position: fixed;
-    top: 35%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: 0 auto;
+    max-width: 400px;
     background-color: rgba(255, 255, 255, 1);
     padding: 10px 20px;
     border-radius: 5px;
